BAP-4027 page horizontal scroll fix

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/layout.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/layout.less
@@ -8,7 +8,7 @@
   left: -9999px;
 }
 &, #page {
-  min-height: 100%;
+  min-height: 100vh;
 }
 &, #page, #top-page {
   height: auto;
